# formatApi

./: .gitignore  README.md  RR.md  build_app.py  config.py  formatapi.spec  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
services/: formatter_service.py  history_service.py  ocr_service.py  template_service.py  text_parser.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/services/: formatter.rs  mod.rs  ocr.rs  storage.rs  text_parser.rs
src-tauri/src/utils/: mod.rs  vendor_detector.rs
ui/: __init__.py  candidate_dialog.py  image_drop_label.py  main_window.py  settings_dialog.py  styles.qss  template_manager_dialog.py
utils/: validators.py  vendor_detector.py
