[package]
name = "tauri-appformat-api"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_appformat_api_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json", "multipart"] }
swift-rs = "1.0.7"
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-vision = { version = "0.3.2", features = ["VNRequestHandler", "VNRequest", "VNRecognizeTextRequest", "VNObservation", "VNTypes"] }
objc2-app-kit = "0.3.2"
serde_yaml = "0.9.34"
toml = "0.9.10"
base64 = "0.22.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"

